10.12.2019
    - Dependency problems: Moved several files. All source together with ui files now. (Tim)
09.12.2019
    - Remove some more "old vs. new" drum track stuff, change some text etc. (Tim)
08.12.2019
	- Added option for opening MDI subwindows maximized (kybos)
    - Oops, fix stuck icons from 06.12. (Tim)
    - Fix gross misnomer throughout, should be "timebase master, not "transport master".
    - Fix EffectRack::songChanged() crash when reloading songs: Check track still exists. (Tim)
07.12.2019
    - Update start play position when making a seek. Rewind to Start behaves
      more logical then, imho (rj)
    - Fix some compile warnings with LV2 worker functions, some others. (Tim)
    - Moved appearance and confmport cpp/h files from /muse to muse/components.
      Trying to solve some dependency problems...
06.12.2019
    - Fixed bug #719 downmix to existing file appends to the old file (rj)
    - Transport master fixes: New button on transport. Fix connect at startup etc. (Tim)
      Seems there is no way to ask Jack if are we transport master (without setting it).
      So new code in our Jack driver - and a 1Hz watchdog - monitor for changes to master status.
      Care was taken to not disturb who else may be master. Click flashing button to force.
      Tested the new button OK with three instances of MusE competing for transport master.
05.12.2019
	- Added File->New from template... menu entry. File->New loads default template (kybos)
	- Fixed inconsistent UI texts where appropriate: (kybos)
	  * Title-style for menu texts and window titles
	  * Sentence-style for all other UI texts 
	  * Three dots (...) for menu entries triggering a dialog (like Save As...)
	- Fixed inconsistent tooltip font size (kybos)
	- Vector replacements for many pixmap icons (kybos)
	- Fixed bug #720 arm follows track did bad things while recording (rj)
03.12.2019
    - Eliminated all but one tr("Empty") string usage in plugins/pipeline/rack. (Tim)