@@ -1,5 +1,6 @@
 10.12.2019
     - Dependency problems: Moved several files. All source together with ui files now. (Tim)
+    - Remove all dead obsolete trackinfo 'alt' button code.
 09.12.2019
     - Remove some more "old vs. new" drum track stuff, change some text etc. (Tim)
 08.12.2019
